tests/snapshots/integration__integration_tests__list__list_json_with_display_fields.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
    - "--format=json"
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLAUDE_CONFIG_DIR: "[TEST_CLAUDE_CONFIG]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    LLVM_PROFILE_FILE: "[LLVM_PROFILE_FILE]"
    OPENCODE_CONFIG_DIR: "[TEST_OPENCODE_CONFIG]"
    PATH: "[PATH]"
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_APPROVALS_PATH: "[TEST_APPROVALS]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_SYSTEM_CONFIG_PATH: "[TEST_SYSTEM_CONFIG]"
    WORKTRUNK_TEST_BASH_INSTALLED: "0"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_CODEX_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_FISH_INSTALLED: "0"
    WORKTRUNK_TEST_GEMINI_INSTALLED: "0"
    WORKTRUNK_TEST_MOCK_CONFIG_DIR: "[TEST_MOCK_CONFIG]"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_INSTALLED: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WORKTRUNK_TEST_ZSH_INSTALLED: "0"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----
[
  {
    "branch": "main",
    "path": "_REPO_",
    "kind": "worktree",
    "commit": {
      "sha": "e52e0f4263b6ea30cadae914ebde3d46431b69ca",
      "short_sha": "e52e0f4",
      "message": "Main commit 2",
      "timestamp": 1735689600
    },
    "working_tree": {
      "staged": false,
      "modified": false,
      "untracked": false,
      "renamed": false,
      "deleted": false,
      "diff": {
        "added": 0,
        "deleted": 0
      }
    },
    "main_state": "is_main",
    "remote": {
      "name": "origin",
      "branch": "main",
      "ahead": 3,
      "behind": 0
    },
    "worktree": {
      "detached": false
    },
    "is_main": true,
    "is_current": true,
    "is_previous": false,
    "statusline": "main  \u001b[2m^\u001b[22m\u001b[2m⇡\u001b[22m  \u001b[32m⇡3\u001b[0m",
    "symbols": "^⇡"
  },
  {
    "branch": "feature-a",
    "path": "_REPO_.feature-a",
    "kind": "worktree",
    "commit": {
      "sha": "1b87d4731ea707905d15a726e193531c20affa14",
      "short_sha": "1b87d47",
      "message": "Add feature-a file",
      "timestamp": 1735718400
    },
    "working_tree": {
      "staged": false,
      "modified": false,
      "untracked": false,
      "renamed": false,
      "deleted": false,
      "diff": {
        "added": 0,
        "deleted": 0
      }
    },
    "main_state": "diverged",
    "main": {
      "ahead": 1,
      "behind": 3,
      "diff": {
        "added": 1,
        "deleted": 0
      }
    },
    "worktree": {
      "detached": false
    },
    "is_main": false,
    "is_current": false,
    "is_previous": false,
    "statusline": "feature-a  \u001b[2m↕\u001b[22m  \u001b[32m↑1\u001b[0m \u001b[2m\u001b[31m↓3\u001b[0m  ^\u001b[32m+1\u001b[0m",
    "symbols": "↕"
  },
  {
    "branch": "feature-b",
    "path": "_REPO_.feature-b",
    "kind": "worktree",
    "commit": {
      "sha": "f62940fcec424585adf98625e722fdf990810614",
      "short_sha": "f62940f",
      "message": "Add feature-b file",
      "timestamp": 1735718400
    },
    "working_tree": {
      "staged": false,
      "modified": false,
      "untracked": false,
      "renamed": false,
      "deleted": false,
      "diff": {
        "added": 0,
        "deleted": 0
      }
    },
    "main_state": "diverged",
    "main": {
      "ahead": 1,
      "behind": 3,
      "diff": {
        "added": 1,
        "deleted": 0
      }
    },
    "worktree": {
      "detached": false
    },
    "is_main": false,
    "is_current": false,
    "is_previous": false,
    "statusline": "feature-b  \u001b[2m↕\u001b[22m  \u001b[32m↑1\u001b[0m \u001b[2m\u001b[31m↓3\u001b[0m  ^\u001b[32m+1\u001b[0m",
    "symbols": "↕"
  },
  {
    "branch": "feature-c",
    "path": "_REPO_.feature-c",
    "kind": "worktree",
    "commit": {
      "sha": "345c7c93ad7c3d8f5b08380898d78e024019599c",
      "short_sha": "345c7c9",
      "message": "Add feature-c file",
      "timestamp": 1735718400
    },
    "working_tree": {
      "staged": false,
      "modified": false,
      "untracked": false,
      "renamed": false,
      "deleted": false,
      "diff": {
        "added": 0,
        "deleted": 0
      }
    },
    "main_state": "diverged",
    "main": {
      "ahead": 1,
      "behind": 3,
      "diff": {
        "added": 1,
        "deleted": 0
      }
    },
    "worktree": {
      "detached": false
    },
    "is_main": false,
    "is_current": false,
    "is_previous": false,
    "statusline": "feature-c  \u001b[2m↕\u001b[22m  \u001b[32m↑1\u001b[0m \u001b[2m\u001b[31m↓3\u001b[0m  ^\u001b[32m+1\u001b[0m",
    "symbols": "↕"
  },
  {
    "branch": "feature-ahead",
    "path": "_REPO_.feature-ahead",
    "kind": "worktree",
    "commit": {
      "sha": "e0c9ce16d24b8c17f0c763f73816037180c89d7f",
      "short_sha": "e0c9ce1",
      "message": "Feature commit 2",
      "timestamp": 1735689600
    },
    "working_tree": {
      "staged": false,
      "modified": true,
      "untracked": true,
      "renamed": false,
      "deleted": false,
      "diff": {
        "added": 1,
        "deleted": 1
      }
    },
    "main_state": "diverged",
    "main": {
      "ahead": 2,
      "behind": 2,
      "diff": {
        "added": 1,
        "deleted": 0
      }
    },
    "worktree": {
      "detached": false
    },
    "is_main": false,
    "is_current": false,
    "is_previous": false,
    "statusline": "feature-ahead  \u001b[36m!\u001b[39m\u001b[36m?\u001b[39m\u001b[2m↕\u001b[22m  @\u001b[32m+1\u001b[0m \u001b[31m-1\u001b[0m  \u001b[32m↑2\u001b[0m \u001b[2m\u001b[31m↓2\u001b[0m  ^\u001b[32m+1\u001b[0m",
    "symbols": "!?↕"
  },
  {
    "branch": "feature-behind",
    "path": "_REPO_.feature-behind",
    "kind": "worktree",
    "commit": {
      "sha": "01cab36ce221a5ff5c7a6cf60cea6bab3c6315d7",
      "short_sha": "01cab36",
      "message": "Initial commit on main",
      "timestamp": 1735689600
    },
    "working_tree": {
      "staged": false,
      "modified": false,
      "untracked": false,
      "renamed": false,
      "deleted": false,
      "diff": {
        "added": 0,
        "deleted": 0
      }
    },
    "main_state": "integrated",
    "integration_reason": "ancestor",
    "main": {
      "ahead": 0,
      "behind": 2,
      "diff": {
        "added": 0,
        "deleted": 0
      }
    },
    "worktree": {
      "detached": false
    },
    "is_main": false,
    "is_current": false,
    "is_previous": false,
    "statusline": "feature-behind  \u001b[2m⊂\u001b[22m  \u001b[2m\u001b[31m↓2\u001b[0m",
    "symbols": "⊂"
  }
]

----- stderr -----
[33m▲[39m [33mJSON output is schema 1; a future release switches the default to schema 2[39m
[2m↳[22m [2mTo adopt the new schema set [4m[list] json-schema = 2[24m; to keep this format, [4mjson-schema = 1[24m[22m
